SimpleComplex/Utils 1.x, 2017-08-19
-----------------------------------
- CLI command features do NOT work without Inspect, however CliEnvironment do.
  Suggest Inspect package in composer.json.
- New CLI command 'utils-execute' for executing an include script.
- Utils::cast() object|array to class name.
- Utils->documentRoot() and Utils->pathReplaceDocumentRoot().
- CliEnvironment::getCurrentWorkingDir() and getDocumentRoot()
  must resolve to real path.

SimpleComplex/Utils 1.x, 2017-08-18
-----------------------------------
- Do not require explicit 'yes' confirmation for risky CLI commands,
  if file .risky_command_skip_confirm placed in document root.

SimpleComplex/Utils 1.x, 2017-08-16
-----------------------------------
- parseJsonString() now removes line comments that begin at line start.
- PathFileListUnique uses filenames as keys and require that filenames
  are unique across directories.

SimpleComplex/Utils 1.x, 2017-08-10
-----------------------------------
- parseJsonString()/parseJsonFile().

SimpleComplex/Utils 1.x, 2017-08-08
-----------------------------------
- ConfigurationException is now a generic exception, usable within other
  packages.

SimpleComplex/Utils 1.x, 2017-08-07
-----------------------------------
- Utils::getType() to get class or type.
- New containerKeys(). And containerIsset/containerGetIfSet now throws exception
  when arg container isn't array|object.
- ArrayAccess BogusArray, for testing behaviour of that stupid interface.

SimpleComplex/Utils 1.x, 2017-08-05
-----------------------------------
- Generic dependency method for listing registered IDs.
- Documentation of known environment-specific IDs; Slim and SimpleComplex.

SimpleComplex/Utils 1.x, 2017-07-20
-----------------------------------
- Cli script find vendor dir fix.

SimpleComplex/Utils 1.x, 2017-07-12
-----------------------------------
- Release 1.0.

SimpleComplex/Utils 1.x, 2017-07-03
-----------------------------------